# libsolace

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  Makefile  Makefile.in  PROJECT.name  README.md  build-conan-package.py  conanfile.py  conanfile.txt  configure  lgtm.yml  libsolace.files  libsolace.includes
.github/workflows/: code-quality-check.yml  conan-publish.yml  test.yml  unit-test.yml
cmake/: compile_flags.cmake
debian/: changelog  control  copyright  rules
doc/: Doxyfile  code_conventions  future.md
docs/: Doxyfile  cli.md  coding_convention.md  framework.md  future.md  intro.md  strings.md
examples/: CMakeLists.txt  application.cpp  async_serial.cpp  cli_multi.cpp  cli_single.cpp  ds_parser.cpp  serial.cpp
include/solace/: array.hpp  arrayPtr.hpp  arrayRef.hpp  arrayView.hpp  assert.hpp  asyncErrorDomain.hpp  atom.hpp  base16.hpp  base64.hpp  byteBuffer.hpp  byteReader.hpp  byteWriter.hpp  char.hpp  delegate.hpp  dialstring.hpp  dictionary.hpp  encoder.hpp  env.hpp  error.hpp  errorDomain.hpp  exception.hpp  future.hpp  icomparable.hpp  iformattable.hpp  immutableMemoryView.hpp  ioobject.hpp  iterable.hpp  libsolace_config.hpp  memoryBuffer.hpp  memoryManager.hpp  memoryResource.hpp  memoryView.hpp  mutableMemoryView.hpp  optional.hpp  output_utils.hpp  parseUtils.hpp  path.hpp  posixErrorDomain.hpp  promise.hpp  range_view.hpp  (+14 more)
include/solace/cli/: commandlineParser.hpp  commandlineUtils.hpp  parser.hpp  utils.hpp
include/solace/details/: array_utils.hpp  futureComposition.hpp  future_impl.hpp  string_utils.hpp
include/solace/framework/: application.hpp  commandlineParser.hpp  commandlineUtils.hpp
include/solace/hashing/: digestAlgorithm.hpp  fixedHash.hpp  fixedSizeDigest.hpp  md5.hpp  messageDigest.hpp  murmur3.hpp  sha1.hpp  sha2.hpp  sha3.hpp
include/solace/io/: anonSharedMemory.hpp  duplex.hpp  file.hpp  filesystem.hpp  ioexception.hpp  mappedMemory.hpp  pipe.hpp  platformFilesystem.hpp  selectable.hpp  selector.hpp  serial.hpp  sharedMemory.hpp  signalDispatcher.hpp
include/solace/io/async/: asyncResult.hpp  channel.hpp  event.hpp  eventloop.hpp  future.hpp  futureComposition.hpp  future_impl.hpp  pipe.hpp  promise.hpp  serial.hpp  signalSet.hpp  timer.hpp  (+1 more)
include/solace/process/: env.hpp
include/solace/traits/: callable.hpp  icomparable.hpp  iformattable.hpp  iterable.hpp
libs/: dependencies
libsolace/: CMakeLists.txt  array.cpp  assert.cpp  byteBuffer.cpp  char.cpp  exception.cpp  immutableMemoryView.cpp  ioobject.cpp  memoryManager.cpp  memoryView.cpp  path.cpp  string.cpp  stringBuilder.cpp  uuid.cpp  version.cpp
libsolace/framework/: commandlineParser.cpp
libsolace/hashing/: md5.cpp  messageDigest.cpp  sha2.cpp  sha3.cpp
libsolace/io/: duplex.cpp  file.cpp  ioexception.cpp  mappedMemory.cpp  pipe.cpp  platformFilesystem.cpp  selector.cpp  selector_epoll.cpp  selector_impl.h  selector_impl.hpp  selector_poll.cpp  serial.cpp  sharedMemory.cpp  signalDispatcher.cpp
libsolace/io/async/: event.cpp  eventLoop.cpp  pipe.cpp  serialChannel.cpp  signalSet.cpp  timer.cpp  unixSocket.cpp
libsolace/process/: env.cpp
src/: CMakeLists.txt  Makefile  array.cpp  assert.cpp  atom.cpp  base16.cpp  base64.cpp  byteBuffer.cpp  byteReader.cpp  byteWriter.cpp  char.cpp  dialstring.cpp  encoder.cpp  env.cpp  error.cpp  errorDomain.cpp  errorString.cpp  exception.cpp  immutableMemoryView.cpp  ioobject.cpp  memoryBuffer.cpp  memoryManager.cpp  memoryResource.cpp  memoryView.cpp  mutableMemoryView.cpp  parseUtils.cpp  path.cpp  readBuffer.cpp  string.cpp  stringBuilder.cpp  stringView.cpp  systemErrorDomain.cpp  uuid.cpp  version.cpp  writeBuffer.cpp
src/cli/: commandlineParser.cpp  helpPrinter.cpp  parser.cpp
src/framework/: application.cpp  commandlineParser.cpp
src/hashing/: md5.cpp  messageDigest.cpp  murmur3.cpp  sha1.cpp  sha2.cpp  sha3.cpp
src/io/: anonSharedMemory.cpp  duplex.cpp  file.cpp  ioexception.cpp  mappedMemory.cpp  pipe.cpp  platformFilesystem.cpp  selector.cpp  selector_epoll.cpp  selector_impl.hpp  selector_poll.cpp  serial.cpp  serial_list_ports.cpp  sharedMemory.cpp  signalDispatcher.cpp
src/io/async/: event.cpp  serialChannel.cpp  timer.cpp  unixSocket.cpp
src/process/: env.cpp
test/: CMakeLists.txt  Makefile  interruptexception.hpp  main.cpp  main_gtest.cpp  mockTypes.cpp  mockTypes.hpp  test_array.cpp  test_arrayPtr.cpp  test_arrayView.cpp  test_atom.cpp  test_base16.cpp  test_base64.cpp  test_byteBuffer.cpp  test_byteReader.cpp  test_byteWriter.cpp  test_char.cpp  test_dialstring.cpp  test_dictionary.cpp  test_env.cpp  test_error.cpp  test_future.cpp  test_memoryBuffer.cpp  test_memoryManager.cpp  test_memoryResource.cpp  test_memoryView.cpp  test_optional.cpp  test_path.cpp  test_readBuffer.cpp  test_result.cpp  test_string.cpp  test_stringBuilder.cpp  test_stringView.cpp  test_uuid.cpp  test_variableSpan.cpp  test_vector.cpp  test_version.cpp  test_writeBuffer.cpp
test/ci/: teamcity_cppunit.cpp  teamcity_cppunit.h  teamcity_gtest.h  teamcity_messages.cpp
test/cli/: test_commandlineParser.cpp  test_parser.cpp
test/framework/: test_commandlineParser.cpp
test/hashing/: test_md5.cpp  test_murmur3.cpp  test_sha1.cpp  test_sha256.cpp
test/io/: test_anonSharedMemory.cpp  test_mappedMemory.cpp  test_pipe.cpp  test_platformfilesystem.cpp  test_selector.cpp  test_selector_epoll.cpp  test_selector_poll.cpp  test_sharedMemory.cpp  test_signalDispatcher.cpp
test/io/async/: test_event.cpp  test_future.cpp  test_pipe.cpp  test_signalSet.cpp  test_timer.cpp
test/process/: test_env.cpp
test/soonObsolete_CPPUnitTests/: main.cpp  test_array.cpp  test_byteBuffer.cpp  test_result.cpp  test_stringView.cpp  test_version.cpp
test/soonObsolete_CPPUnitTests/cli/: test_parser.cpp
test/soonObsolete_CPPUnitTests/hashing/: test_murmur3.cpp
test/soonObsolete_CPPUnitTests/io/: test_pipe.cpp  test_platformfilesystem.cpp  test_selector_epoll.cpp
test/soonObsolete_CPPUnitTests/process/: test_env.cpp
test_package/: CMakeLists.txt
tools/: README.md
(+2 files in other folders)
