# Build examples
# TODO(abbyssoul): Disabled as not supported by clang (without gold linker that is)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flto -fwhole-program")


# TBD: Library usage example
#set(EXAMPLE_example_SOURCE_FILES example.cpp)
#add_executable(example ${EXAMPLE_SERIAL_SOURCE_FILES})
#target_link_libraries(example ${PROJECT_NAME})
